--- a/63CNTT5N2/63CNTT5N2/Areas/Admin/Views/Supplier/Create.cshtml
+++ b/63CNTT5N2/63CNTT5N2/Areas/Admin/Views/Supplier/Create.cshtml
@@ -7,7 +7,7 @@
 
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Supplier", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -28,7 +28,7 @@
                     <div class="card-header">
                         <div class="row">
                             <div class="col-md-6">
-                                <strong class="text danger">THÊM MỚI LOẠI SẢN PHẨM</strong>
+                                <strong class="text danger">THÊM MỚI NHÀ CUNG CẤP</strong>
                             </div>
                             <div class="col-md-6 text-right">
                                 <a href="@Url.Action("Index","Supplier")" class="btn-sm btn-info"><i class="fa fa-long-arrow-alt-lefts"></i>Quay lại</a>
@@ -54,7 +54,7 @@
                                     </div>
                                 </div>
 
-                                
+
 
                                 <div class="form-group">
                                     @Html.LabelFor(model => model.MetaDesc, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -76,7 +76,7 @@
                                 <div class="form-group">
                                     <label>Logo NCC<span class="text-danger"></span></label>
                                     <div class="col-md-10">
-                                        <input name="img" type="file" class="form-control"/>
+                                        <input name="img" type="file" class="form-control" />
                                     </div>
                                 </div>
 
