--- a/63CNTT5N2/63CNTT5N2/Areas/Admin/Views/Supplier/Edit.cshtml
+++ b/63CNTT5N2/63CNTT5N2/Areas/Admin/Views/Supplier/Edit.cshtml
@@ -1,23 +1,19 @@
-﻿@model MyClass.Model.Suppliers
+﻿﻿@model MyClass.Model.Suppliers
 
 @{
-    ViewBag.Title = "Cap nhat thong tin na cung cap";
+    ViewBag.Title = "Cập nhật thông tin nhà cung cấp";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Supplier", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.Id)
-    @Html.HiddenFor(model => model.Id)
-    @Html.HiddenFor(model => model.Id)
+    @Html.HiddenFor(model => model.CreatedAt)
+    @Html.HiddenFor(model => model.CreatedBy)
+
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-
-
-
     <div class="wrapper">
-
         <!-- Main Sidebar Container -->
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
@@ -29,16 +25,18 @@
                     <div class="card-header">
                         <div class="row">
                             <div class="col-md-6">
-                                <strong class="text danger">CAP NHAT THONG TIN NHA CUNG CAP</strong>
+                                <strong class="text-danger">CẬP NHẬT THÔNG TIN NHÀ CUNG CẤP</strong>
                             </div>
                             <div class="col-md-6 text-right">
-                                <a href="@Url.Action("Index","Supplier")" class="btn-sm btn-info"><i class="fa fa-long-arrow-alt-lefts"></i>Quay lại</a>
+                                <a href="@Url.Action("Index", "Supplier")" class="btn-sm btn-info"><i class="fa fa-long-arrow-alt-left"></i> Quay lại</a>
                             </div>
                         </div>
                     </div>
                     <div class="card-body">
+
                         <div class="row">
                             <div class="col-md-9">
+                                <!--Dien du lieu tu ban phim-->
                                 <div class="form-group">
                                     @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-12" })
                                     <div class="col-md-10">
@@ -51,17 +49,14 @@
                                     @Html.LabelFor(model => model.FullName, htmlAttributes: new { @class = "control-label col-md-12" })
                                     <div class="col-md-10">
                                         @Html.EditorFor(model => model.FullName, new { htmlAttributes = new { @class = "form-control" } })
-                                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                                        @Html.ValidationMessageFor(model => model.FullName, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
-
-
 
                                 <div class="form-group">
                                     @Html.LabelFor(model => model.MetaDesc, htmlAttributes: new { @class = "control-label col-md-2" })
                                     <div class="col-md-10">
                                         @Html.TextAreaFor(model => model.MetaDesc, new { @class = "form-control", @row = "5" })
-                                        @*@Html.EditorFor(model => model.MetaDesc, new { htmlAttributes = new { @class = "form-control" } })*@
                                         @Html.ValidationMessageFor(model => model.MetaDesc, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -70,35 +65,34 @@
                                     @Html.LabelFor(model => model.MetaKey, htmlAttributes: new { @class = "control-label col-md-2" })
                                     <div class="col-md-10">
                                         @Html.TextAreaFor(model => model.MetaKey, new { @class = "form-control", @row = "5" })
-                                        @*@Html.EditorFor(model => model.MetaKey, new { htmlAttributes = new { @class = "form-control" } })*@
                                         @Html.ValidationMessageFor(model => model.MetaKey, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
+
                                 <div class="form-group">
-                                    <label>Logo NCC<span class="text-danger"></span></label>
+                                    <label>Logo NCC <span class="text-danger"></span></label>
                                     <div class="col-md-10">
                                         <input name="img" type="file" class="form-control" />
                                     </div>
                                 </div>
-
-                            </div><!--dien du lieu tu ban phimh-->
-
-
+                            </div><!--Dien du lieu tu ban phim-->
 
                             <div class="col-md-3">
-                                <!--chon tu danh sach-->
+                                <!--Chon tu danh sach-->
+
                                 <div class="form-group">
                                     @Html.LabelFor(model => model.URL, htmlAttributes: new { @class = "control-label col-md-12" })
                                     <div class="col-md-10">
                                         @Html.EditorFor(model => model.URL, new { htmlAttributes = new { @class = "form-control" } })
-                                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                                        @Html.ValidationMessageFor(model => model.URL, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
+
                                 <div class="form-group">
                                     @Html.LabelFor(model => model.Phone, htmlAttributes: new { @class = "control-label col-md-12" })
                                     <div class="col-md-10">
                                         @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
-                                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                                        @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
 
@@ -106,14 +100,14 @@
                                     @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-12" })
                                     <div class="col-md-10">
                                         @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
 
                                 <div class="form-group">
                                     @Html.LabelFor(model => model.Order, htmlAttributes: new { @class = "control-label col-md-12" })
                                     <div class="col-md-10">
-                                        @Html.DropDownListFor(model => model.Order, (SelectList)ViewBag.ListOrder, "Sắp xếp", new { @class = "form-control" })
+                                        @Html.DropDownListFor(model => model.Order, (SelectList)@ViewBag.ListOrder, "Sắp xếp", new { @class = "form-control" })
                                         @Html.ValidationMessageFor(model => model.Order, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -122,17 +116,18 @@
                                     @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-12" })
                                     <div class="col-md-10">
                                         @Html.DropDownListFor(model => model.Status, new[] { new SelectListItem { Text = "Xuất bản", Value = "1" }, new SelectListItem { Text = "Không xuất bản", Value = "2" } }, new { @class = "form-control" })
-                                        @*@Html.EditorFor(model => model.Status, new { htmlAttributes = new { @class = "form-control" } })*@
                                         @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
-                                <button class="btn-sm btn-success" type="submit" name="create">Lưu/Thêm<i class="fa fa-save"></i></button>
-                            </div><!--cl3-->
-                        </div><!--row-->
+
+                            </div><!--Chon tu danh sach-->
+
+                        </div><!--div row-->
+                        <button class="btn-sm btn-success" type="submit" name="create"> Lưu/Thêm <i class="fa fa-save"></i> </button>
                     </div> <!-- /.card-footer-->
                 </div><!-- /.card -->
             </section><!-- /.content -->
         </div> <!-- /.content-wrapper -->
     </div><!-- ./wrapper -->
-}
 
+}
