--- a/63CNTT5N2/63CNTT5N2/Areas/Admin/Views/Supplier/Index.cshtml
+++ b/63CNTT5N2/63CNTT5N2/Areas/Admin/Views/Supplier/Index.cshtml
@@ -1,9 +1,10 @@
-﻿@model IEnumerable<MyClass.Model.Suppliers>
+﻿﻿@model IEnumerable<MyClass.Model.Suppliers>
 
 @{
     ViewBag.Title = "Trang chủ nhà cung cấp";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
+
 @section header{
     <link rel="stylesheet" href="~/Public/css/jquery.dataTables.css" />
 }
@@ -12,8 +13,6 @@
     <script src="~/Public/js/jquery.dataTables.js"></script>
     <script>let table = new DataTable('#myTable');</script>
 }
-
-<h2>Index</h2>
 
 <div class="wrapper">
     <!-- Main Sidebar Container -->
@@ -27,7 +26,7 @@
                 <div class="card-header">
                     <div class="row">
                         <div class="col-md-6">
-                            <strong class="text-danger">DANH SÁCH NHÀ CUNG CẤP</strong>
+                            <strong class="text-danger">DANH MỤC NHÀ CUNG CẤP</strong>
                         </div>
                         <div class="col-md-6 text-right">
                             <a href="@Url.Action("Create","Supplier")" class="btn-sm btn-success"><i class="fa fa-plus"></i> Thêm mới</a>
@@ -37,45 +36,44 @@
                 </div>
                 <div class="card-body">
                     @Html.Partial("Message")
-                    <table class="table table-bordered table-striped" , id="myTable">
+                    <table class="table table-bordered table-striped" id="myTable">
                         <thead>
                             <tr>
-                                <th>@Html.DisplayNameFor(model => model.Id)</th>
-                                <td>@Html.DisplayNameFor(model => model.Name)</td>
-                                <td>@Html.DisplayNameFor(model => model.Image)</td>
-                              
-                                <td>@Html.DisplayNameFor(model => model.Order)</td>
-                                <td>@Html.DisplayNameFor(model => model.Phone)</td>
-                                <td>@Html.DisplayNameFor(model => model.Email)</td>
+                                <th>#</th>
+                                <th>Id</th>
+                                <th>@Html.DisplayNameFor(model => model.Name)</th>
+                                <th>@Html.DisplayNameFor(model => model.Image)</th>
+                                <th>@Html.DisplayNameFor(model => model.Order)</th>
+                                <th>@Html.DisplayNameFor(model => model.Phone)</th>
+                                <th>@Html.DisplayNameFor(model => model.Email)</th>
                                 <th>Chức năng</th>
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var item in Model)
                             {
-                            <tr>
-                                <td><input type="checkbox" name="checkid" /></td>
-                                <td>@Html.DisplayFor(modelItem => item.Id)</td>
-                                <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                                <td><img src="~/Public/img/supplier/@item.Image" alt="Image" class="img-fluid" /></td>
-                                <td>@Html.DisplayFor(modelItem => item.Order)</td>
-                                <td>@Html.DisplayFor(modelItem => item.Phone)</td>
-                                <td>@Html.DisplayFor(modelItem => item.Email)</td>
-                                
-                                <td>
-                                    @if (item.Status == 1)
-                                    {
-                                        <a href="@Url.Action("Status","Supplier", new { id = item.Id })" class="btn-sm btn-success"><i class="fa fa-toggle-on"></i></a>
-                                    }
-                                    else
-                                    {
-                                        <a href="@Url.Action("Status","Supplier", new { id = item.Id })" class="btn-sm btn-danger"><i class="fa fa-toggle-off"></i></a>
-                                    }
-                                    <a href="@Url.Action("Edit","Supplier", new { id = item.Id })" class="btn-sm btn-primary"><i class="fa fa-edit"></i></a>
-                                    <a href="@Url.Action("Details","Supplier", new { id = item.Id })" class="btn-sm btn-info"><i class="fa fa-eye"></i></a>
-                                    <a href="@Url.Action("MoveTrash","Supplier", new { id = item.Id })" class="btn-sm btn-danger"><i class="fa fa-trash"></i></a>
-                                </td>
-                            </tr>
+                                <tr>
+                                    <td><input type="checkbox" name="checkid" value="" /></td>
+                                    <td>@Html.DisplayFor(modelItem => item.Id)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                                    <td><img src="~/Public/img/supplier/@item.Image" alt="Image" class="img-fluid" /></td>
+                                    <td>@Html.DisplayFor(modelItem => item.Order)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Phone)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Email)</td>
+                                    <td>
+                                        @if (item.Status == 1)
+                                        {
+                                            <a href="@Url.Action("Status","Supplier", new { id = item.Id })" class="btn-sm btn-success"><i class="fa fa-toggle-on"></i></a>
+                                        }
+                                        else
+                                        {
+                                            <a href="@Url.Action("Status","Supplier", new { id = item.Id })" class="btn-sm btn-danger"><i class="fa fa-toggle-off"></i></a>
+                                        }
+                                        <a href="@Url.Action("Edit","Supplier", new { id = item.Id })" class="btn-sm btn-primary"><i class="fa fa-edit"></i></a>
+                                        <a href="@Url.Action("Details","Supplier", new { id = item.Id })" class="btn-sm btn-info"><i class="fa fa-eye"></i></a>
+                                        <a href="@Url.Action("MoveTrash","Supplier", new { id = item.Id })" class="btn-sm btn-danger"><i class="fa fa-trash"></i></a>
+                                    </td>
+                                </tr>
                             }
                         </tbody>
                     </table>
@@ -84,5 +82,3 @@
         </section><!-- /.content -->
     </div> <!-- /.content-wrapper -->
 </div><!-- ./wrapper -->
-
-
