--- a/63CNTT5N2/63CNTT5N2/Areas/Admin/Views/Supplier/Trash.cshtml
+++ b/63CNTT5N2/63CNTT5N2/Areas/Admin/Views/Supplier/Trash.cshtml
@@ -1,8 +1,21 @@
-﻿﻿@model MyClass.Model.Suppliers
+﻿@model IEnumerable<MyClass.Model.Suppliers>
+@{
+    ViewBag.Title = "Thùng rác nhà cung cấp";
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
+}
 
 @{
-    ViewBag.Title = "Thông tin chi tiết nhà cung cấp";
+    ViewBag.Title = "Trang chủ nhà cung cấp";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
+}
+
+@section header {
+    <link href="~/Public/css/cdn.datatables.net_1.13.6_css_jquery.dataTables.min.css" rel="stylesheet" />
+}
+
+@section footer {
+    <script src="~/Public/js/cdn.datatables.net_1.13.6_js_jquery.dataTables.min.js"></script>
+    <script>let table = new DataTable('#myTable');</script>
 }
 
 <div class="wrapper">
@@ -17,10 +30,9 @@
                 <div class="card-header">
                     <div class="row">
                         <div class="col-md-6">
-                            <strong class="text-danger">CHI TIẾT NHÀ CUNG CẤP</strong>
+                            <strong class="text-danger">THÙNG RÁC NHÀ CUNG CẤP</strong>
                         </div>
                         <div class="col-md-6 text-right">
-                            <a href="@Url.Action("Edit","Supplier")" class="btn-sm btn-success"><i class="fa fa-edit"> Sửa</i></a>
                             <a href="@Url.Action("Index","Supplier")" class="btn-sm btn-info"><i class="fa fa-long-arrow-alt-left"> Quay lại</i></a>
                         </div>
                     </div>
@@ -38,22 +50,27 @@
                                 <th>@Html.DisplayNameFor(model => model.Phone)</th>
                                 <th>@Html.DisplayNameFor(model => model.Email)</th>
                                 <th>@Html.DisplayNameFor(model => model.Image)</th>
-                                <th>@Html.DisplayNameFor(model => model.Status)</th>
+                                <th>Chức năng</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>@Html.DisplayFor(model => model.Id)</td>
-                                <td>@Html.DisplayFor(model => model.Name)</td>
-                                <td>@Html.DisplayFor(model => model.FullName)</td>
-                                <td>@Html.DisplayFor(model => model.Order)</td>
-                                <td>@Html.DisplayFor(model => model.Phone)</td>
-                                <td>@Html.DisplayFor(model => model.Email)</td>
-                                <td><img src="~/Public/img/supplier/@Model.Image" alt="Img" class="img-fluid" /></td>
-                                <td>@Html.DisplayFor(model => model.Status)</td>
-                            </tr>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@Html.DisplayFor(modelItem => item.Id)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.FullName)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Order)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Phone)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Email)</td>
+                                    <td><img src="~/Public/img/supplier/@item.Image" alt="Img" class="img-fluid" /></td>
+                                    <td>
+                                        <a href="@Url.Action("Recover","Supplier", new { id = item.Id })" class="btn-sm btn-info"><i class="fa fa-undo"></i></a>
+                                        <a href="@Url.Action("Delete","Supplier", new { id = item.Id })" class="btn-sm btn-danger"><i class="fa fa-trash"></i></a>
+                                    </td>
+                                </tr>
+                            }
                         </tbody>
-
                     </table>
 
                 </div> <!-- /.card-footer-->
